--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-----section 1-->
+    <!-----section 1---->
     <div class="contaner">
         <div class="top">
             <h5>First Website</h5>
